src/test/ui/const-generics/issue-61336-2.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/issue-61336-2.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^

error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/issue-61336-2.rs:9:5
   |
LL |     [x; {N}]
   |     ^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
   = help: consider adding a `where T: std::marker::Copy` bound
   = note: the `Copy` trait is required because the repeated element will be copied

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
